--- a/estilo/style.css
+++ b/estilo/style.css
@@ -72,7 +72,7 @@ header > p {
     padding-left: 10px;
     padding-right: 10px;
     margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     text-shadow: 2px 2px 10px rgb(251, 248, 248);
 }
 
